# idtp

./: README.md
c/: CMakeLists.txt
c/include/idtp/: idtp.h  idtp_header.h  utils.h
c/src/: idtp.c
examples/rust/: idtp_frame_example.rs
examples/rust/idtp_example/: Cargo.toml
examples/rust/idtp_example/src/: main.rs
rust/idtp/src/: header.rs  idtp.rs
rust/idtp/tests/: integration_test.rs
src/c/src/: idtp_header.c  utils.c
src/c/tests/: test_idtp_frame.cc  test_idtp_header.cc
src/rust/idtp/: Cargo.toml
src/rust/idtp/src/: header.rs  idtp.rs  lib.rs
