# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2025-present idtp project and contributors.

# Project package info section.
[package]
name        = "idtp"
version     = "0.1.0"
description = "IMU Data Transfer Protocol implementation"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/idtp"
license     = "Apache-2.0"
edition     = "2024"

# Project dependencies section.
[dependencies]
